--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="nav-bar">
         <div class="nav-contain">
           <div>
-            <a class="link" href="index.html">Kenechukwu Oguagbaka</a>
+            <a class="link" href="index.html">Chinonso Enekwechi</a>
           </div>
           <div>
             <a class="link p-2" href="index.html">Portfolio</a>
@@ -33,7 +33,7 @@
           <div class="inner-head-para">
             <h2 class="h-2">
               Hey There,<br />
-              I'm Kenechukwu
+              I'm Chinonso
             </h2>
             <h5>I'm a software Developer</h5>
             <p>
@@ -44,23 +44,23 @@
             </p>
             <p class="pl-3">Let's Connect</p>
             <div class="icons">
-              <a class="icons-l" href="https://github.com/keneogu"
+              <a class="icons-l" href="https://github.com/Oxford-G"
               rel="noopener noreferrer"
               target="_blank"
               ><i class="fab fa-github"></i
               ></a>
-              <a class="icons-l" href="https://twitter.com/keneogu"
+              <a class="icons-l" href="https://twitter.com/OXFOXD2"
               rel="noopener noreferrer"
                 target="_blank"
                 ><i class="fab fa-twitter"></i
               ></a>
-              <a class="icons-l" href="https://www.linkedin.com/in/kene-ogu/"
+              <a class="icons-l" href="https://www.linkedin.com/in/chinonso-enekwechi"
               rel="noopener noreferrer"
               target="_blank"
               ><i class="fab fa-linkedin-in"></i
               ></a>
             </div>
-            <a href="mailto:kc101com@gmail.com" class="icons-l" target="_blank">kc101com@gmail.com</a>
+            <a href="mailto:chiiinonsky0009@gmail.com" class="icons-l" target="_blank">chiiinonsky0009@gmail.com</a>
           </div>
         </div>
       </div>
@@ -72,13 +72,13 @@
           <div class="works-holder mt-4">
             <div class="works">
               <img
-                src="images/twitter-redesign.png"
+                src="images/second.png"
                 alt="twitter-redesign"
                 class="image"
               />
-              <h5 class="works-h5">TWITTER FOR BOOKS</h5>
+              <h5 class="works-h5">TWITTER FOR LOCATION</h5>
               <p class="works-para">
-                In this app you can tweet about books, follow other users
+                In this app you can tweet about locations, follow other users
               </p>
               <div class="d-flex flex-wrap justify-content-center">
                 <span class="w-1">html</span>
@@ -89,13 +89,13 @@
 			  </div>
 			  <div class="my-3">
 				<a
-				  href="https://intense-earth-31445.herokuapp.com/"
+				  href="https://mighty-gorge-44973.herokuapp.com/"
 				  rel="noopener noreferrer"
 				  target="_blank" class="work-link"
 				  >My Project</a
         >
         <a
-				  href="https://github.com/keneogu/portfolio"
+				  href="https://github.com/Oxford-G"
 				  rel="noopener noreferrer"
 				  target="_blank" class="work-link"
 				  >Github</a
@@ -104,13 +104,13 @@
             </div>
             <div class="works">
               <img
-                src="images/direct-hotel.png"
-                alt="directory of hotels"
+                src="images/index-2.png"
+                alt="directory of housing"
                 class="image"
               />
-              <h5 class="works-h5">DIRECTORY OF HOTELS</h5>
+              <h5 class="works-h5">DIRECTORY OF HOUSE</h5>
               <p class="works-para">
-                This is a directory of hotels home page and a sample search
+                This is a directory of house home page and a sample search
                 results page. The website is build using the modern css.
               </p>
               <div class="d-flex flex-wrap justify-content-center">
@@ -123,13 +123,13 @@
 			  </div>
 			  <div class="my-3">
 				<a
-				  href="https://keneogu.github.io/HTML-CSS-CAPSTONE-PROJECT/"
+				  href="https://oxford-g.github.io/HTML-CSS-CAPSTONE-PROJECT/index.html"
 				  rel="noopener noreferrer"
 				  target="_blank" class="work-link"
 				  >My Project</a
         >
         <a
-				  href="https://github.com/keneogu/HTML-CSS-CAPSTONE-PROJECT/tree/hotel-directory"
+				  href="https://github.com/Oxford-G/HTML-CSS-CAPSTONE-PROJECT"
 				  rel="noopener noreferrer"
 				  target="_blank" class="work-link"
 				  >Github</a
@@ -138,29 +138,25 @@
             </div>
             <div class="works">
               <img
-                src="images/tictactoe.png"
-                alt="twitter-redesign"
+                src="images/resturant.png"
+                alt="restaurant page"
                 class="image"
               />
-              <h5 class="works-h5">TICTACTOE GAME</h5>
+              <h5 class="works-h5">RESTAURANT PAGE</h5>
               <p class="works-para">
-                The game involves two players each assigned a symbol X OR O. If
-                any of the players has all his symbols aligned either
-                horizontally,vertically ,diagnoally or antidiagnolly first then
-                he/she becomes the winner. Otherwise, if the board is full and
-                none of them has won then the game is a draw and thus game over.
+                A simple restaurant page where customers can order for their favourite delicacie.
               </p>
 
               <span class="w-1">ruby</span><br />
 			  <div class="my-3">
 				<a
-				  href="https://replit.com/@incrediblekenny/tic-tac-toe#main.rb"
+				  href="https://oxford-g.github.io/Restaurant-page/dist/index"
 				  rel="noopener noreferrer"
 				  target="_blank" class="work-link"
 				  >My Project</a
         >
         <a
-				  href="https://github.com/keneogu/Tic-Tac-Toe"
+				  href="https://github.com/Oxford-G/Restaurant-page"
 				  rel="noopener noreferrer"
 				  target="_blank" class="work-link"
 				  >Github</a
@@ -168,11 +164,10 @@
 				</div>
             </div>
             <div class="works">
-              <img src="images/telegram.png" alt="telegram-bot" class="image" />
-              <h5 class="works-h5">TELEGRAM BOT</h5>
+              <img src="images/menu.PNG" alt="telegram-bot" class="image" />
+              <h5 class="works-h5">SPACE SHOOTER</h5>
               <p class="works-para">
-                This is a telegram bot that displays information about four west
-                African nations, Nigeria, Togo, Senegal and Benin.
+                A shooter game about a pilot searching revenge, made with phaser 3 and Webpack.
               </p>
 
               <span class="w-1">ruby</span><br />
