--- a/index.html
+++ b/index.html
@@ -117,9 +117,7 @@
                 <span class="w-1">html</span>
                 <span class="w-1">css</span>
                 <span class="w-1">sass</span>
-                <span class="w-1">bootstrap</span>
-                <span class="w-1">ruby</span>
-                <span class="w-1">ruby-on-rails</span><br />
+                <span class="w-1">bootstrap</span><br />
 			  </div>
 			  <div class="my-3">
 				<a
@@ -146,8 +144,11 @@
               <p class="works-para">
                 A simple restaurant page where customers can order for their favourite delicacie.
               </p>
-
-              <span class="w-1">ruby</span><br />
+              <span class="w-1">html</span>
+              <span class="w-1">css</span>
+              <span class="w-1">sass</span>
+              <span class="w-1">bootstrap</span>
+              <span class="w-1">javascript</span><br />
 			  <div class="my-3">
 				<a
 				  href="https://oxford-g.github.io/Restaurant-page/dist/index"
@@ -164,16 +165,22 @@
 				</div>
             </div>
             <div class="works">
-              <img src="images/menu.PNG" alt="telegram-bot" class="image" />
+              <img src="images/menu.PNG" alt="space-shooter" class="image" />
               <h5 class="works-h5">SPACE SHOOTER</h5>
               <p class="works-para">
                 A shooter game about a pilot searching revenge, made with phaser 3 and Webpack.
               </p>
-
-              <span class="w-1">ruby</span><br />
+              <span class="w-1">html</span>
+              <span class="w-1">css</span>
+              <span class="w-1">sass</span>
+              <span class="w-1">bootstrap</span>
+              <span class="w-1">PHASER 3</span>
+              <span class="w-1">NPM</span>
+              <span class="w-1">WEBPACK</span>
+              <span class="w-1">javascript</span><br />
 			  <div class="my-3">
 				<a
-				  href="https://github.com/keneogu/TelegramBot"
+				  href="https://github.com/Oxford-G/Space-Shooter"
 				  rel="noopener noreferrer"
 				  target="_blank" class="work-link"
 				  >My Project</a
@@ -198,7 +205,7 @@
 			  </p>
 			  <div class="my-3">
 				<a
-				  href="https://docs.google.com/document/d/14UVCGO_RS7ysEzlT9tuS6WFQAeyyiR9_V9HMS4Lcbns/edit?usp=sharing"
+				  href="https://docs.google.com/document/d/1uh7Fx7vkfKCnjuvaNbeU9is5kcF4UfVN_R7kj4aZUgU/edit?usp=sharing"
 				  rel="noopener noreferrer"
 				  target="_blank" class="btn-link"
 				  >My Resume</a
@@ -279,17 +286,17 @@
 
       <footer class="footer">
         <div class="foot-icons">
-          <a class="icons-f" href="https://github.com/keneogu"
+          <a class="icons-f" href="https://github.com/Oxford-G"
           rel="noopener noreferrer"
           target="_blank"
           ><i class="fab fa-github"></i
           ></a>
-          <a class="icons-f" href="https://twitter.com/keneogu"
+          <a class="icons-f" href="https://twitter.com/OXFOXD2"
           rel="noopener noreferrer"
           target="_blank"
           ><i class="fab fa-twitter"></i
           ></a>
-          <a class="icons-f" href="https://www.linkedin.com/in/kene-ogu/"
+          <a class="icons-f" href="https://www.linkedin.com/in/chinonso-enekwechi"
           rel="noopener noreferrer"
           target="_blank"
           ><i class="fab fa-linkedin-in"></i
