--- a/index.html
+++ b/index.html
@@ -172,8 +172,6 @@
               </p>
               <span class="w-1">html</span>
               <span class="w-1">css</span>
-              <span class="w-1">sass</span>
-              <span class="w-1">bootstrap</span>
               <span class="w-1">PHASER 3</span>
               <span class="w-1">NPM</span>
               <span class="w-1">WEBPACK</span>
@@ -184,7 +182,13 @@
 				  rel="noopener noreferrer"
 				  target="_blank" class="work-link"
 				  >My Project</a
-				>
+        >
+        <a
+        href="https://github.com/Oxford-G/Space-Shooter"
+        rel="noopener noreferrer"
+        target="_blank" class="work-link"
+        >Github</a
+      >
 				</div>
             
             </div>
