--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				  >My Project</a
         >
         <a
-				  href="https://github.com/Oxford-G"
+				  href="https://github.com/Oxford-G/location"
 				  rel="noopener noreferrer"
 				  target="_blank" class="work-link"
 				  >Github</a
