--- a/index.html
+++ b/index.html
@@ -104,30 +104,30 @@
             </div>
             <div class="works">
               <img
-                src="images/index-2.png"
+                src="images/snow.jpg"
                 alt="directory of housing"
                 class="image"
               />
-              <h5 class="works-h5">DIRECTORY OF HOUSE</h5>
+              <h5 class="works-h5">WeatherApp</h5>
               <p class="works-para">
-                This is a directory of house home page and a sample search
-                results page. The website is build using the modern css.
+                This is a weather app project built using the open weather 
+                API where a user can extract the current weather information of a city.
               </p>
               <div class="d-flex flex-wrap justify-content-center">
                 <span class="w-1">html</span>
                 <span class="w-1">css</span>
                 <span class="w-1">sass</span>
-                <span class="w-1">bootstrap</span><br />
+                <span class="w-1">javascript</span><br />
 			  </div>
 			  <div class="my-3">
 				<a
-				  href="https://oxford-g.github.io/HTML-CSS-CAPSTONE-PROJECT/index.html"
+				  href="https://oxford-g.github.io/WeatherApp/dist/index"
 				  rel="noopener noreferrer"
 				  target="_blank" class="work-link"
 				  >My Project</a
         >
         <a
-				  href="https://github.com/Oxford-G/HTML-CSS-CAPSTONE-PROJECT"
+				  href="https://github.com/Oxford-G/WeatherApp"
 				  rel="noopener noreferrer"
 				  target="_blank" class="work-link"
 				  >Github</a
