grammer error corrected

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                 In this app you can tweet about locations, follow other users
               </p>
               <div class="d-flex flex-wrap justify-content-center">
-                <span class="w-1">html</span>
-                <span class="w-1">css</span>
-                <span class="w-1">bootstrap</span>
-                <span class="w-1">ruby</span>
-                <span class="w-1">ruby-on-rails</span><br />
+                <span class="w-1">HTML</span>
+                <span class="w-1">CSS</span>
+                <span class="w-1">BOOTSTRAP</span>
+                <span class="w-1">RUBY</span>
+                <span class="w-1">RUBY-ON-RAILS</span><br />
 			  </div>
 			  <div class="my-3">
 				<a
@@ -114,10 +114,10 @@
                 API where a user can extract the current weather information of a city.
               </p>
               <div class="d-flex flex-wrap justify-content-center">
-                <span class="w-1">html</span>
-                <span class="w-1">css</span>
-                <span class="w-1">sass</span>
-                <span class="w-1">javascript</span><br />
+                <span class="w-1">HTML</span>
+                <span class="w-1">CSS</span>
+                <span class="w-1">SASS</span>
+                <span class="w-1">JAVASCRIPT</span><br />
 			  </div>
 			  <div class="my-3">
 				<a
@@ -144,11 +144,11 @@
               <p class="works-para">
                 A simple restaurant page where customers can order for their favourite delicacie.
               </p>
-              <span class="w-1">html</span>
-              <span class="w-1">css</span>
-              <span class="w-1">sass</span>
-              <span class="w-1">bootstrap</span>
-              <span class="w-1">javascript</span><br />
+              <span class="w-1">HTML</span>
+              <span class="w-1">CSS</span>
+              <span class="w-1">SASS</span>
+              <span class="w-1">BOOTSTRAP</span>
+              <span class="w-1">JAVASCRIPT</span><br />
 			  <div class="my-3">
 				<a
 				  href="https://oxford-g.github.io/Restaurant-page/dist/index"
@@ -170,12 +170,12 @@
               <p class="works-para">
                 A shooter game about a pilot searching revenge, made with phaser 3 and Webpack.
               </p>
-              <span class="w-1">html</span>
-              <span class="w-1">css</span>
+              <span class="w-1">HTML</span>
+              <span class="w-1">CSS</span>
               <span class="w-1">PHASER 3</span>
               <span class="w-1">NPM</span>
               <span class="w-1">WEBPACK</span>
-              <span class="w-1">javascript</span><br />
+              <span class="w-1">JAVASCRIPT</span><br />
 			  <div class="my-3">
 				<a
 				  href="https://github.com/Oxford-G/Space-Shooter"
