--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+    /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="your_website_domain/css_root/flaticon.css">
+    <link href="/static/css/main.001a5f18.chunk.css" rel="stylesheet">
+    <link href="./css/styles.css" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/65e5819ba9.js"
       crossorigin="anonymous"
@@ -21,10 +25,15 @@
       <nav class="nav-bar">
         <div class="nav-contain">
           <div>
-            <a class="link" href="index.html">Chinonso Enekwechi</a>
+            <a class="link" href="index.html">Enekwechi Chinonso Gerald</a>
           </div>
           <div>
-            <a class="link p-2" href="index.html">Portfolio</a>
+            <ul class="left">
+              <li class=""><a class="link" href="#About">About</a></li>
+              <li ><a class="link" href="#Project">Project</a></li>
+              <li ><a class="link" href="#Skills">Skills</a></li>
+              <li ><a class="link" href="#Expertise">Expertise</a></li>
+            </ul>
           </div>
         </div>
       </nav>
