add images of projects

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             <div class="border-line"></div>
             <div class="blocks-container">
               <img src="images/second.png" alt="twitter-redesign"><h1>TWITTER FOR LOCATION</h1>
-              <p>Esconnect is an E-commerce web app, 
-                The purpose of this project was and is to help the businesses with the wonderful goods and services.
+              <p>Location is a Twitter clone web app. In this app you can tweet about locations, follow other users.
+                Built with Ruby on Rails.
               </p>
               <div class="link">
                 <a class="github" href="https://github.com/Oxford-G/location" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
@@ -99,7 +99,7 @@
           <div class="api sc-iwsKbI hRZzmY">
             <div class="border-line"></div>
             <div class="blocks-container">
-              <img src="images/snow.jpg" alt="Weather app"><h1>NewsWeek</h1>
+              <img src="images/snow.jpg" alt="Weather app"><h1> WeatherApp</h1>
                 <p> This is a weather app project built using the open weather 
                 API where a user can extract the current weather information of a city.
                 </p>
@@ -131,7 +131,7 @@
               </p>
               <div class="link">
                 <a class="github" href="https://github.com/Oxford-G/Space-Shooter" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
-                <a class="liveserver" href="https://github.com/Oxford-G/Space-Shooter" target="_blank" rel="noopener noreferrer"><i class="bi bi-box-arrow-up-right"></i></a>
+                <a class="liveserver" href="https://hidden-brook-99127.herokuapp.com/" target="_blank" rel="noopener noreferrer"><i class="bi bi-box-arrow-up-right"></i></a>
               </div>
             </div>
           </div>
@@ -139,12 +139,13 @@
           <div class="ds sc-iwsKbI hRZzmY">
             <div class="border-line"></div>
             <div class="blocks-container">
-              <img src="images/menu.PNG" alt="space-shooter"><h1>SPACE SHOOTER</h1>
-              <p>A shooter game about a pilot searching revenge, made with phaser 3 and Webpack.
+              <img src="images/hacker_stories.png" alt="hacker_stories"><h1>Hacker Stories/h1>
+              <p>Hacker-Stories is a React project where users can manage and organize their news.
+                It is built with HTML, CSS, React and JavaScript.
               </p>
               <div class="link">
-                <a class="github" href="https://github.com/Oxford-G/Space-Shooter" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
-                <a class="liveserver" href="https://github.com/Oxford-G/Space-Shooter" target="_blank" rel="noopener noreferrer"><i class="bi bi-box-arrow-up-right"></i></a>
+                <a class="github" href="https://github.com/Oxford-G/hacker-stories" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                <a class="liveserver" href="https://secret-meadow-93386.herokuapp.com/" target="_blank" rel="noopener noreferrer"><i class="bi bi-box-arrow-up-right"></i></a>
               </div>
             </div>
           </div>
@@ -152,12 +153,14 @@
           <div class="ds sc-iwsKbI hRZzmY">
             <div class="border-line"></div>
             <div class="blocks-container">
-              <img src="images/menu.PNG" alt="space-shooter"><h1>SPACE SHOOTER</h1>
-              <p>A shooter game about a pilot searching revenge, made with phaser 3 and Webpack.
+              <img src="images/home.png" alt="space-shooter"><h1>Crypto Catalogue</h1>
+              <p>Crypto-Catalogue is an app made with React and Redux, 
+                and its purpose is to fetch data for various cryptocurrencies from https://www.coingecko.com/en/api/documentation api,
+                 and you can also filter data to get a specific coin.
               </p>
               <div class="link">
-                <a class="github" href="https://github.com/Oxford-G/Space-Shooter" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
-                <a class="liveserver" href="https://github.com/Oxford-G/Space-Shooter" target="_blank" rel="noopener noreferrer"><i class="bi bi-box-arrow-up-right"></i></a>
+                <a class="github" href="https://github.com/Oxford-G/crypto-catalogue" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                <a class="liveserver" href="https://oxy-crypto-app.herokuapp.com/" target="_blank" rel="noopener noreferrer"><i class="bi bi-box-arrow-up-right"></i></a>
               </div>
             </div>
           </div>
@@ -287,21 +290,20 @@
 
       <section>
         <div class="form">
-          <h2 class="hPqllD">Talk to Me</h2>
+          <h2 class="hPqllD">Contact Me</h2>
           <fieldset class="design">
               <form action="/contact.html" method="POST">
-                  <label for="fname">
-                      Names:
-                      <input type="text" name="Names" class="names" id="fname" required>
-                  </label>
-                  <label for="email">
-                      E-mail:
-                      <input type="email" name="E-mail" class="email" id="email" required>
-                  </label>
-                  <label for="message">
-                      <textarea name="Message" class="message" placeholder="Leave your Message!!" cols="50" rows="5" id="message" required></textarea>
-                  </label>
-                  <input type="submit" value="Send Message" class="button">
+                <div>
+                  <input type="text" name="Names" class="names" placeholder="Enter your name..." id="fname" required>
+                </div>
+                <div>
+                  <input type="email" name="E-mail" class="email" placeholder="Enter your email..." id="email" required>
+                </div>
+
+                <div>
+                  <textarea name="Message" class="message" placeholder="Leave your Message!!" cols="50" rows="5" id="message" required></textarea>
+                </div>
+                <input type="submit" value="Send Message" class="button">
               </form>
             </fieldset>
         </div>
