add action to contact form

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <div class="form">
           <h2 class="hPqllD">Contact Me</h2>
           <fieldset class="design">
-              <form action="/contact.html" method="POST">
+              <form action="chiiinonsky0009@gmail.com" method="POST">
                 <div>
                   <input type="text" name="Names" class="names" placeholder="Enter your name..." id="fname" required>
                 </div>
